--- a/client/src/app/components/common/register/register.component.html
+++ b/client/src/app/components/common/register/register.component.html
@@ -86,8 +86,13 @@
           <div class="mb-3">
             <label for="confirmPassword" class="form-label">Confirm Password *</label>
             <div class="position-relative">
-              <input id="confirmPassword" [type]="showPassword ? 'text' : 'password'" class="form-control"
+              <input id="confirmPassword" [type]="showConfirmPassword ? 'text' : 'password'" class="form-control"
                 formControlName="confirmPassword" placeholder="Re-enter your password" />
+              <button type="button"
+                class="btn btn-link position-absolute top-50 end-0 translate-middle-y text-primary pe-3"
+                (click)="toggleConfirmPassword()">
+                {{ showConfirmPassword ? "Hide" : "Show" }}
+              </button>
             </div>
             <div *ngIf="registerForm.get('confirmPassword')?.touched && registerForm.hasError('passwordMismatch')"
               class="text-danger small mt-1">
